Fix login element not showing

--- a/frontend/src/styles/_nav.scss
+++ b/frontend/src/styles/_nav.scss
@@ -1,5 +1,26 @@
 @use "theme";
 
+@mixin login() {
+  div {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    justify-items: end;
+    align-items: center;
+    gap: 10px;
+
+    .buttonCont {
+      grid-column: 1/3;
+      width: 100%;
+
+      button {
+        width: 100%;
+        margin: auto;
+      }
+    }
+  }
+}
+
 nav {
   width: 100%;
   position: absolute;
@@ -26,7 +47,8 @@ nav {
   z-index: 3;
 }
 
-#loginCont {
+.fixedLogin {
+  @include login();
   position: absolute;
   width: 100%;
   top: -150px;
@@ -35,26 +57,11 @@ nav {
   background-color: theme.$primary-color;
   transition: 0.3s;
 
-  div {
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
-    justify-items: end;
-    align-items: center;
-    gap: 10px;
-
-    .buttonCont {
-      grid-column: 1/3;
-      width: 100%;
-
-      button {
-        width: 100%;
-        margin: auto;
-      }
-    }
-  }
-
   &.active {
     top: 0;
   }
+}
+
+.nonFixedLogin {
+  @include login();
 }
